Get all tests passing